--- a/walkthroughs/curly/walkthrough.adoc
+++ b/walkthroughs/curly/walkthrough.adoc
@@ -4,6 +4,7 @@
 :prewrap!:
 :description: This is the getting started experience for Developers, focusing on web console usage.
 :keywords: getting started, developers, web console, templates
+:imagesdir: files/
 
 toc::[]
 
