update adoc to support more walkthrough features

--- a/walkthroughs/slides/walkthrough.adoc
+++ b/walkthroughs/slides/walkthrough.adoc
@@ -2,6 +2,34 @@
 
 image::slide-imgs/solx.png[]
 
+
+ifdef::openshift-host[]
+:sectnums:
+
+[type=walkthroughResource,serviceName=openshift]
+.Red Hat OpenShift
+****
+* link:{openshift-host}/console[Console, window="_blank"]
+* link:https://help.openshift.com/[Openshift Online Help Center, window="_blank"]
+* link:https://blog.openshift.com/[Openshift Blog, window="_blank"]
+****
+
+[type=walkthroughResource,serviceName=fuse]
+.Fuse Online
+****
+* link:{fuse-url}[Console, window="_blank", id="resources-fuse-url"]
+* link:{fuse-documentation-url}[Fuse Documentation, window="_blank"]
+****
+
+[type=walkthroughResource,serviceName=amq-online-standard]
+.AMQ Online
+****
+* link:{enmasse-url}[Console, window="_blank", , id="resources-enmasse-url"]
+* link:{amq-documentation-url}[AMQ Documentation, window="_blank"]
+****
+
+endif::openshift-host[]
+
 == Thank You!
 
 Thank you all for the work on Solution Explorer:
@@ -32,3 +60,18 @@ Instead of writing, you can find existing files that suit your purpose.
 
 
 
+* link:https://access.redhat.com/documentation/en-us/red_hat_fuse/7.4/[Fuse] online -> link:https://github.com/syndesisio/syndesis/tree/master/doc[Upstream docs]
+* link:https://access.redhat.com/documentation/en-us/red_hat_amq/7.4/[AMQ] online -> link:https://github.com/EnMasseProject/enmasse/tree/master/documentation[Upstream docs]
+* 3scale -> internal only
+* link:https://access.redhat.com/documentation/en-us/openshift_dedicated/3/[OSD] -> link:https://github.com/openshift/openshift-docs/tree/dedicated[Upstream docs]
+
+
+=== Create a repo from the template
+
+
+https://github.com/integr8ly/walkthrough-template
+
+
+= References
+
+* Writing clarifies thinking - https://hbr.org/2016/09/bad-writing-is-destroying-your-companys-productivity
